[build-system]
requires = ["Cython>=3.2.4", "setuptools"]

[tool.cibuildwheel]
build-verbosity = 2
environment = {LUPA_USE_BUNDLE = "true"}
environment-pass = ["LUPA_LIMITED_API"]
skip = [
    "pp*-manylinux_aarch64",
    "pp*-manylinux_i686",
    # Minimum Python version (for wheels) is 3.9.
    "cp38*",
    # FT on i686 crashes for some reason
    "cp31?t-*_i686",
    ]
enable = [
    "cpython-prerelease",
    "pypy",
    ]
test-skip = ["*-macosx_*"]
test-command = "python -c \"import lupa\" && python -c \"import lupa.lua54\" "

[tool.cibuildwheel.windows]
archs = ["AMD64", "x86", "ARM64"]
test-command = "python -c \"import lupa\" && python -c \"import lupa.lua54\" && python -c \"import lupa.luajit21\" "

[tool.cibuildwheel.macos]
# https://cibuildwheel.readthedocs.io/en/stable/faq/#what-to-provide suggests to provide
# x86_64 and one of universal2 or arm64 wheels.  x86_64 is still required by older pips,
# so additional arm64 wheels would suffice.  However, since the library build uses a mixed
# amd64/arm64 setup, we build universal2 wheels regardless.
archs = ["x86_64", "arm64", "universal2"]

[tool.cibuildwheel.macos.environment]
LUPA_WITH_LUA_DLOPEN = "true"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64", "i686", "armv7l", "ppc64le", "riscv64"]
repair-wheel-command = "auditwheel repair --strip -w {dest_dir} {wheel}"
environment = {AR = "gcc-ar", NM = "gcc-nm", RANLIB = "gcc-ranlib", LDFLAGS = "-fPIC -flto", LUPA_USE_BUNDLE = "true", LUPA_WITH_LUA_DLOPEN = "true"}

[[tool.cibuildwheel.overrides]]
select = "*linux_i686 *linux_x86_64"
inherit.environment = "append"
environment.CFLAGS = "-O3 -g0 -mtune=generic -pipe -fPIC -flto"

[[tool.cibuildwheel.overrides]]
select = "*aarch64"
inherit.environment = "append"
environment.CFLAGS = "-O3 -g1 -pipe -fPIC -flto -march=armv8-a -mtune=cortex-a72"

[[tool.cibuildwheel.overrides]]
select = "*armv7l"
inherit.environment = "append"
environment.CFLAGS = "-O3 -g1 -pipe -fPIC -flto"
